Try add again 20240404

--- a/css_fucntion.html
+++ b/css_fucntion.html
@@ -120,6 +120,15 @@
         <img src="/image/css_link_style.png" alt="" id="picture">
     </div>
 
+    <div>
+        <h2>Display คือ การจัgข้อมูล Layout</h2>
+        <img src="/image/css_Display.png" alt="" id="picture">
+    </div>
+
+    <div>
+        <h2>Visibility คือ การแสดงหรือซ่อนวัตถุโดยไม่กระทบ Layout</h2>
+        <img src="/image/css_visibility.png" alt="" id="picture">
+    </div>
 
 
     <footer id="footer">
