--- a/css_fucntion.html
+++ b/css_fucntion.html
@@ -129,6 +129,10 @@
         <h2>Visibility คือ การแสดงหรือซ่อนวัตถุโดยไม่กระทบ Layout</h2>
         <img src="/image/css_visibility.png" alt="" id="picture">
     </div>
+    <div>
+        <h2>Position คือ การจัดตำแหน่งของวัตถุ</h2>
+        <img src="/image/css_position.png" alt="">
+    </div>
 
 
     <footer id="footer">
