add cursor style add opacity add overflow

--- a/css_fucntion.html
+++ b/css_fucntion.html
@@ -8,6 +8,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="stype.css">
+    <style>
+        h1{
+            position: sticky;
+            top: 0;
+        }
+        .shadow{
+            box-shadow: 10px 10px 10px 5px hotpink;
+        }
+    </style>
     <title>CSS function</title>
 </head>
 <body>
@@ -131,7 +140,27 @@
     </div>
     <div>
         <h2>Position คือ การจัดตำแหน่งของวัตถุ</h2>
-        <img src="/image/css_position.png" alt="">
+        <img src="/image/css_position.png" alt="" id="picture">
+    </div>
+    <div>
+        <h2>Overflow</h2>
+        <img src="/image/css_overflow.png" alt="" id="picture">
+    </div>
+    <div>
+        <h2>Cursor style</h2>
+        <img src="/image/css_cursor_style.png" alt="" id="picture">
+        <br>
+        <a href="https://tailwindcss.com/docs/cursor">Cursor style</a>
+    </div>
+    <div>
+        <h2>Box-Shadow คือ การกำหนดเงาให้วัตถุ</h2>
+        <img src="/image/css_boxshadow.png" alt="" id="picture" class="shadow">
+
+    </div>
+    <div>
+        <h2>Opacity คือ การกำหนดความทึบ</h2>
+        <img src="/image/css_opacity.png" alt="" id="picture" >
+
     </div>
 
 
