--- a/index.html
+++ b/index.html
@@ -50,13 +50,32 @@
                  CSS Grip :
                 <a href="https://css-tricks.com/snippets/css/complete-guide-grid/" target="_blank">Guide to Grip</a>    
             </div>
+
             <div>
                 Material color - สีของระบบ Material design :
                <a href="https://m2.material.io/design/color/the-color-system.html" target="_blank">The color system</a>
            </div>
-           
 
+           <div>
+                <a href="/css_Display.html" target="_blank">CSS display</a>
+            </div>
 
+            <div>
+                <a href="/css_link_style_sudo_class.html" target="_blank">CSS Link style Sudo Class</a>
+            </div>
+
+            <div>
+                <a href="/css_opacity.html" target="_blank">CSS Opacity</a>
+            </div>
+
+            <div>
+                <a href="/css_position.html" target="_blank">CSS Position</a>
+            </div>
+        </section>
+
+        <section id="main3">
+            <h1>Basic CSS PH2</h1>
+            <a href="https://youtu.be/EdbWjGkPlUo?si=0ZWm2G7unt3szS3a" target="_blank" rel="noopener noreferrer">Basic CSS PH2</a>
         </section>
     </main>
 
