--- a/css_link_style_sudo_class.html
+++ b/css_link_style_sudo_class.html
@@ -8,9 +8,11 @@
         a{
             text-decoration: none;
         }
+        /* sudo class */
         a:link{
             color:red;
         }
+        /* sudo class */
         a:visited{
             color: black;
         }
