add css basic phase 2

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="stype.css">
+    <link rel="stylesheet" href="style.css">
     <title>Basic HTML and Basic CSS</title>
 </head>
 <body>
@@ -35,7 +35,7 @@
         </section>
 
         <section id="main2">
-            <h1>Basic CSS PH1</h1>
+            <h1>Basic CSS PH1 &#x2713;</h1>
             <a href="https://youtu.be/HcInSUzhaUc" target="_blank">Basic CSS PH1</a>
             <br><a href="/css_fucntion.html">CSS Fucntion</a>
             <div>
@@ -76,6 +76,10 @@
         <section id="main3">
             <h1>Basic CSS PH2</h1>
             <a href="https://youtu.be/EdbWjGkPlUo?si=0ZWm2G7unt3szS3a" target="_blank" rel="noopener noreferrer">Basic CSS PH2</a>
+           
+            <div>
+                <a href="/css_fustion_ph2.html" target="_blank" rel="noopener noreferrer">CSS Function Phase 2</a>
+            </div>
         </section>
     </main>
 
