--- a/css_opacity.html
+++ b/css_opacity.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Opacity</title>
-    <link rel="stylesheet" href="stype.css">
+    <link rel="stylesheet" href="style.css">
     <style>
         img{
             width: 33%;
