--- a/video_and_sound.html
+++ b/video_and_sound.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="stype.css">
+    <link rel="stylesheet" href="style.css">
     <title>HTML video & Sound</title>
 </head>
 <body>
