--- a/css_Display.html
+++ b/css_Display.html
@@ -41,9 +41,14 @@
     </div>
     <div class="box">
         <h1>Title 3</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, labore. 
-            Nulla delectus similique rerum vel quam, non nesciunt harum sequi soluta 
-            esse temporibus quod excepturi libero iure atque. Delectus, eveniet!</p>
+        <pre>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Ea, 
+        labore. 
+        Nulla delectus similique rerum vel quam, 
+        non nesciunt harum sequi soluta esse temporibus quod excepturi libero iure atque. 
+        Delectus, 
+        eveniet!
+        </pre>
     </div>
 </body>
 </html>
