--- a/css_fustion_ph2.html
+++ b/css_fustion_ph2.html
@@ -3,10 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Function Phase 2</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+
+    <title>CSS Function Phase 2</title>
 </head>
 <body>
-    
+    <div id="header">
+        CSS Function Phase 2
+    </div>
+
+    <div>
+        <h2>Responsive Wed design</h2>
+        <p>การออกแบบเว็บที่ตอบสนองและแสดงผลได้ดีบนอุปกรณ์ต่างๆหรือขนาดหน้าจอที่หลากหลาย เช่น จอคคอมพิวเตอร์ หรือ สมาร์ทโฟน เป็นต้น</p>
+        <img src="/image/css_responsive_wed_design.png" alt="" id="picture">
+        <p>คำสั่งตรวจสอบขนาดหน้าจอ จะใช้ Media Query</p>
+        <p>Media Query คือ รูปแบบการเขียน style ให้แสดงผลตามขนาดหน้าจอที่แตกต่างกัน</p>
+        <img src="/image/css_responsive_wed_design_Media_query.png" alt="" id="picture">
+        <img src="/image/css_responsive_wed_design_Media_query_screenSize.png" alt="" id="picture">
+    </div>
 </body>
 </html>
