add view point add wed respon

--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
         <section id="main3">
             <h1>Basic CSS PH2</h1>
             <a href="https://youtu.be/EdbWjGkPlUo?si=0ZWm2G7unt3szS3a" target="_blank" rel="noopener noreferrer">Basic CSS PH2</a>
-           
+           <div>
+            <a href="https://tailwindcss.com/docs/responsive-design" target="_blank">Tailwindcss</a>
+           </div>
             <div>
                 <a href="/css_fustion_ph2.html" target="_blank" rel="noopener noreferrer">CSS Function Phase 2</a>
             </div>
