--- a/css_fustion_ph2.html
+++ b/css_fustion_ph2.html
@@ -19,6 +19,7 @@
     <div>
         <h2>Responsive Wed design</h2>
         <p>การออกแบบเว็บที่ตอบสนองและแสดงผลได้ดีบนอุปกรณ์ต่างๆหรือขนาดหน้าจอที่หลากหลาย เช่น จอคคอมพิวเตอร์ หรือ สมาร์ทโฟน เป็นต้น</p>
+        <a href="https://tailwindcss.com/docs/responsive-design" target="_blank">CSS tailwindcss</a><br>
         <img src="/image/css_responsive_wed_design.png" alt="" id="picture">
         <p>คำสั่งตรวจสอบขนาดหน้าจอ จะใช้ Media Query</p>
         <p>Media Query คือ รูปแบบการเขียน style ให้แสดงผลตามขนาดหน้าจอที่แตกต่างกัน</p>
