add flexbox basic

--- a/css_fustion_ph2.html
+++ b/css_fustion_ph2.html
@@ -26,5 +26,16 @@
         <img src="/image/css_responsive_wed_design_Media_query.png" alt="" id="picture">
         <img src="/image/css_responsive_wed_design_Media_query_screenSize.png" alt="" id="picture">
     </div>
+    <div>
+        <h2>Flexbox</h2>
+        <p>คือเครืองมือใน CSS ที่ช่วยให้การจัดการ element ต่างๆ ในหน้าเว็บมีความง่ายและยืดหยุ่นมากยิ่งขึ้น</p>
+        <img src="/image/css_flexbox.png" alt="" id="picture">
+        <p>องค์ประกอบโดยใช้ Container และกล่อง 3 กล่อง</p>
+        <img src="/image/css_flexbox-2.png" alt="" id="picture">
+        <p>การจัดเรียงในแบบอื่นๆ</p>
+        <img src="/image/css_flexbox-3.png" alt="" id="picture">
+        <p>การกำหนด Flexbox</p>
+        <img src="/image/css_flexbox-4.png" alt="" id="picture">
+    </div>
 </body>
 </html>
