--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
             <div>
                 <a href="/css_fustion_ph2.html" target="_blank" rel="noopener noreferrer">CSS Function Phase 2</a>
             </div>
+            <div>
+                <a href="/wed_responsive.html" target="_blank">Wed Responsive Design</a>
+            </div>
+            <div>
+                <a href="/view_point.html" target="_blank">View Point</a>
+            </div>
         </section>
     </main>
 
