--- a/css_flexbox.html
+++ b/css_flexbox.html
@@ -11,25 +11,28 @@
         <div class="item item-1">
             <h2>Flexbox-1</h2>
             <p>จะมีองค์กรอบคือ Container และ Box โดยมีขนาดแต่ละ Box เท่าๆกัน</p>
+            <p>Flex basic ยืดหยุดค่าเริ่มต้น</p>
         </div>
 
         <div class="item item-2">
             <h2>Flexbox-2</h2>
             <p>จะมีองค์กรอบคือ Container และ Box โดยมีขนาดแต่ละ Box เท่าๆกัน</p>
+            <p>Flex shrink หดเป็นกี่เท่า</p>
         </div>
 
         <div class="item item-3">
             <h2>Flexbox-3</h2>
             <p>จะมีองค์กรอบคือ Container และ Box โดยมีขนาดแต่ละ Box เท่าๆกัน</p>
+            <p>Flex grow ขยายเป็นกี่เท่า</p>
         </div>
 
-        <div class="item item-3">
-            <h2>Flexbox-3</h2>
+        <div class="item item-4">
+            <h2>Flexbox-4</h2>
             <p>จะมีองค์กรอบคือ Container และ Box โดยมีขนาดแต่ละ Box เท่าๆกัน</p>
         </div>
 
-        <div class="item item-3">
-            <h2>Flexbox-3</h2>
+        <div class="item item-5">
+            <h2>Flexbox-5</h2>
             <p>จะมีองค์กรอบคือ Container และ Box โดยมีขนาดแต่ละ Box เท่าๆกัน</p>
         </div>
     </div>
