--- a/css_fustion_ph2.html
+++ b/css_fustion_ph2.html
@@ -36,6 +36,18 @@
         <img src="/image/css_flexbox-3.png" alt="" id="picture">
         <p>การกำหนด Flexbox</p>
         <img src="/image/css_flexbox-4.png" alt="" id="picture">
+        <p>กำหนดทิศทางด้วย Flex-direction</p>
+        <img src="/image/css_flexbox-5.png" alt="" id="picture">
+        <p>การกำหนดขนาดด้วย Flex-wrap คือการห่อหุ่ม element</p>
+        <img src="/image/css_flexbox-6.png" alt="" id="picture">
+    </div>
+    <div>
+        <h2>Flex Item</h2>
+        <p>การกำหนด Propertise ให้กับ Item ใน Flexbox</p>
+        <p>Flex-basic กำหนดค่าความยืดหยุ่นเริ่มต้น</p>
+        <p>Flex-shrink หดเป็นกี่เท่าถ้าเทียบกับ item อื่น</p>
+        <p>Flex-grow ขยายเป็นกี่เท่าถ้าเทียบกับ Item อื่น</p>
+        <img src="/image/css_flexitem-1.png" alt="" id="picture">
     </div>
 </body>
 </html>
