--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Basic HTML and Basic CSS</title>
+    <style>
+        main{
+            display: flex;
+            flex-direction: row;
+            flex-wrap: nowrap;
+        }
+    </style>
 </head>
 <body>
     <header id="header">
