add flex justify and alignment

--- a/css_fustion_ph2.html
+++ b/css_fustion_ph2.html
@@ -49,5 +49,16 @@
         <p>Flex-grow ขยายเป็นกี่เท่าถ้าเทียบกับ Item อื่น</p>
         <img src="/image/css_flexitem-1.png" alt="" id="picture">
     </div>
+
+    <div>
+        <h2>Flex Justify</h2>
+        <p>การจัดวางตำแหน่งของ Item เทียบกับแกนหลัก ของ Container</p>
+        <img src="/image/css_flex_justify.png" alt="" id="picture">
+    </div>
+    <div>
+        <h2>Flex Alignment (Item)</h2>
+        <p>การจัดวาง Item เทียบกับแกนตรงข้าม</p>
+        <img src="/image/css_flex_alignment_item.png" alt="" id="picture">
+    </div>
 </body>
 </html>
