add grid template to css grid

--- a/css_fustion_ph2.html
+++ b/css_fustion_ph2.html
@@ -66,6 +66,15 @@
         
         <img src="/image/css_grid.png" alt="" id="picture">
         <img src="/image/css_grid-2.png" alt="" id="picture">
+        <p>Grid propoties</p>
+        <ol>
+            <li>Span layout</li>
+            <li>FR unit</li>
+            <p>ใช้เป็นหน่วบแบบ relative หลีกเลี่ยงการใช้แบบ px </p>
+            <li>gap</li>
+            <li>grid-template-area</li>
+        </ol>
+        <img src="/image/css_grid-3_span.png" alt="" id="picture">
     </div>
 </body>
 </html>
