--- a/css_grid.html
+++ b/css_grid.html
@@ -5,19 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Grid Layout</title>
     <style>
-        .grid-item{
+        /* .grid-item{
             padding: 3rem;
-            border: 1px solid #ccc;
+            border: 0.2rem solid #000000;
             background: orange;
             font-size: 1.5rem;
             font-weight: bold;
             text-align: center;
-        }
+        } */
         .grid-container{
             display: grid;
-            grid-template-rows: repeat(3,100);
+            /* grid-template-rows: repeat(3,1fr); */
             /* grid-template-columns: 200px 200px 200px; */
-            grid-template-columns: repeat(4,auto);
+            /* grid-template-columns: repeat(4,auto); */
+            /* grid-template-columns: repeat(4,1fr); */
+            /* grid-row-gap: 0.5rem; */
+            /* grid-column-gap: 0.5rem; */
+            
+            /* grid-template-columns: 1fr 10fr 1fr;
+            grid-template-rows: 1fr 10fr 1fr;
+            grid-template-areas: 
+            'header header header'
+            'sidebar content sidebar2'
+            'footer footer footer'; */
+
+            grid-template: 
+            'header header header' 2fr
+            'sidebar content sidebar2' 10fr
+            'footer footer footer' 1fr
+            / 1fr 10fr 1fr ;
         }
         /* .grid-item:first-child{
             background-color: salmon;
@@ -40,29 +56,46 @@
             grid-row: 3/6;
         } */
 
-        .grid-item:first-child{
+        /* .grid-item:first-child{
             grid-row: 1/ span 3;
             grid-column: 2 /span 2;
+        } */
+
+        .header-item{
+            background-color: seagreen;
+            grid-area: header;
+            color: white;
         }
+        .sidebar-item{
+            background-color: slateblue;
+            grid-area: sidebar;
+            color: white;
+        }
+        .sidebar2-item{
+            background-color: slateblue;
+            grid-area: sidebar2;
+            color: white;
+        }
+        .content-item{
+            background-color: sienna;
+            grid-area: content;
+            color: white;
+        }
+        .footer-item{
+            background-color: skyblue;
+            grid-area: footer;
+        }
+
     </style>
 </head>
 <body>
     <div class="grid-container">
-        <div class="grid-item item1">item-1</div>
-        <div class="grid-item item2">item-2</div>
-        <div class="grid-item item3">item-3</div>
-        <div class="grid-item item4">item-4</div>
-        <div class="grid-item item5">item-5</div>
-        <div class="grid-item item6">item-6</div>
-        <div class="grid-item item7">item-7</div>
-        <div class="grid-item item8">item-8</div>
-        <div class="grid-item item9">item-9</div>
-        <div class="grid-item item10">item-10</div>
-        <div class="grid-item item11">item-11</div>
-        <div class="grid-item item12">item-12</div>
-        <div class="grid-item item13">item-13</div>
-        <div class="grid-item item14">item-14</div>
-        <div class="grid-item item15">item-15</div>
+        <div class="header-item">Header</div>
+        <div class="sidebar-item">Sidebar</div>
+        <div class="content-item">Content</div>
+        <div class="sidebar2-item">Sidebar</div>
+        <div class="footer-item">Footer</div>
+        
 
 
     </div>
