add Advance selectors 1

--- a/css_fustion_ph2.html
+++ b/css_fustion_ph2.html
@@ -76,5 +76,28 @@
         </ol>
         <img src="/image/css_grid-3_span.png" alt="" id="picture">
     </div>
+    <div>
+        <h2>Advance Selectors</h2>
+        <img src="/image/css_advance_selectors.png" alt="" id="picture">
+
+        <ul>
+            <li>Targeted Selector</li>
+                <ul>
+                    <li>Descendant Selector</li>
+                    <li>Child Selector</li>
+                </ul>
+        <img src="/image/css_advance_selectors-targeted.png" alt="" id="picture">
+            <li>Style By Attribute</li>
+            <li>Special Attibute</li>
+            <li>Pseudo Selectors</li>
+                <ul>
+                    <li>First-child</li>
+                    <li>Last-child</li>
+                    <li>ntn-cdhild</li>
+                </ul>
+            <li>Before & After Pseudo</li>
+            
+        </ul>
+    </div>
 </body>
 </html>
