--- a/index.html
+++ b/index.html
@@ -101,6 +101,15 @@
             <div>
                 <a href="/view_point.html" target="_blank">View Point</a>
             </div>
+            <div>
+                <a href="/css_flexbox.html" target="_blank">Flexbox</a>
+            </div>
+            <div>
+                <a href="/css_grid.html" target="_blank">Grid Layout</a>
+            </div>
+            <div>
+                <a href="/advance_selector.html" target="_blank">Advance Selectors</a>
+            </div>
         </section>
     </main>
 
